Fix alignment

--- a/lighthouse-core/report/html/report-styles.css
+++ b/lighthouse-core/report/html/report-styles.css
@@ -1332,12 +1332,10 @@
 .lh-table td {
   padding: 8px 6px;
 }
-.lh-table th:first-child,
-.lh-table td:first-child {
+.lh-table th:first-child {
   padding-left: 0;
 }
-.lh-table th:last-child,
-.lh-table td:last-child {
+.lh-table th:last-child {
   padding-right: 0;
 }
 
